2014-07-22  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_wizard.snmp_explorer.php,
	include/functions.php: some fixes for the snmp v3.

2014-07-22  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: fixed to show the QR code image
	in the creation of a new agent.

2014-07-21  Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb.postgreSQL.sql: fixed the SQL.

2014-07-18  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php, include/functions_reporting.php:
	fixed to show the unknown graph in simple graph.
	
	INCIDENT: #1035

2014-07-17  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/auth/ldap.php, include/auth/mysql.php: fixed the
	parameters with white spaces.
	
	INCIDENT: #1063

2014-07-17  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_groups.php: added parameter to avoid the check
	the propagation in the function "groups_get_childrens".
	
	* include/functions_networkmap.php,
	operation/agentes/networkmap.php,
	operation/agentes/networkmap.topology.php: added feature to show the
	agents in subgroups (or not).
	
	INCIDENT: #1018

2014-07-14  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/admin_access_log.php
	  include/functions.php: Added export to csv.

	* godmode/audit_log_csv.php: Added file.

2014-07-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the call "set_update_agent"
	because before the call get the id_server but this data never
	was translated to name_server. And added id_server into the call
	"get_pandora_servers" in the last position.

2014-07-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: restored the parameter name server in
	the api call "set_new_agent", thanks KOSAKA.

2014-07-10  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_snmp_alert_field1.php: Updated help.

2014-07-09  Mario Pulido <mario.pulido@artica.es>
